--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="prod-icon.png"> 
   <title>CGS Mapping Prod Calculator</title>
   <style>
     body {
@@ -162,9 +163,23 @@
         width: 45px !important;
       }
     }
+	#logo {
+		height: 150px;
+		
+		maargin-bottom: -120px;
+	}
+	.logo-top{
+		display:flex;
+		margin-bottom: -150px;
+	}
   </style>
 </head>
 <body>
+<div class="logo-top">
+	<marquee behavior="scroll" direction="right">
+  <img id="logo" src="santa.png" alt="CGS Xmas Logo" />
+  </marquee>
+  </div>
   <h2>CGS Mapping Prod Calculator</h2>
   
   <!-- Top Inputs -->
@@ -692,4 +707,5 @@ window.addEventListener('DOMContentLoaded', () => {
   </script>
 </body>
 </html>
+
 
