--- a/index.html
+++ b/index.html
@@ -170,13 +170,13 @@
 	}
 	.logo-top{
 		display:flex;
-		margin-bottom: -150px;
+		margin-bottom: -100px;
 	}
   </style>
 </head>
 <body>
 <div class="logo-top">
-	<marquee behavior="scroll" direction="right">
+	<marquee behavior="scroll" direction="right" scrollamount="20">
   <img id="logo" src="santa.png" alt="CGS Xmas Logo" />
   </marquee>
   </div>
@@ -707,5 +707,6 @@ window.addEventListener('DOMContentLoaded', () => {
   </script>
 </body>
 </html>
+
 
 
