--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         width: 45px !important;
       }
     }
-	#logo {
+	#logo-santa {
 		height: 150px;
 		
 		maargin-bottom: -120px;
@@ -172,14 +172,52 @@
 		display:flex;
 		margin-bottom: -100px;
 	}
+	
+	.marquee {
+    position: absolute;
+    white-space: nowrap;
+    font-size: 32px;
+    font-weight: bold;
+    color: white;
+    text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
+    animation: diagonal-scroll 10s linear infinite;
+}
+
+/* Santa image bounce */
+#logo {
+   max-height: 250px;
+    animation: santa-bounce 1.1s ease-in-out infinite alternate;
+}
+
+@keyframes diagonal-scroll {
+    0% {
+        left: -300px;    /* Start off-screen left */
+        top: 100vh;      /* Start at bottom */
+    }
+    100% {
+        left: 100vw;     /* End at right edge */
+        top: -100px;     /* End off-screen top */
+    }
+}
+
+/* Up–down bounce */
+@keyframes santa-bounce {
+    0% {
+        transform: translateY(0);
+    }
+    100% {
+        transform: translateY(-50px);
+    }
+}
   </style>
 </head>
 <body>
 <div class="logo-top">
-	<marquee behavior="scroll" direction="right" scrollamount="20">
-  <img id="logo" src="santa.png" alt="CGS Xmas Logo" />
-  </marquee>
-  </div>
+<img id="logo-santa" src="xmaslogo.png" alt="CGS Xmas Logo" />
+</div>
+	<div class="marquee" scrollamount="20">
+          <img id="logo" src="santa.png" alt="CGS Xmas Logo" />
+    </div>
   <h2>CGS Mapping Prod Calculator</h2>
   
   <!-- Top Inputs -->
@@ -707,6 +745,7 @@ window.addEventListener('DOMContentLoaded', () => {
   </script>
 </body>
 </html>
+
 
 
 
